--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -14,3 +14,18 @@ body {
   width: 100%;
   height: 100%;
 }
+
+#header {
+  width: 100%;
+  height: 5%;
+}
+
+#main {
+  width: 100%;
+  min-height: 85%;
+}
+
+#footer {
+  width: 100%;
+  height: 10%;
+}
