--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="spacing-y-4">
-    <header>
+    <header id="header" >
       <%= render partial:"shared/navbar" %>
     </header>
-    <main class="container mx-auto my-28 px-5 flex">
+    <main id="main" class="container mx-auto my-28 px-5 flex">
       <%= yield %>
     </main>
-    <footer>
+    <footer id="footer" >
       <%= render partial:"shared/footer" %>
     </footer>
   </body>
