--- a/app/views/post/create.html.erb
+++ b/app/views/post/create.html.erb
@@ -1,26 +1,26 @@
 <div class="w-full">
   <h2 class="font-bold md:text-4xl text-2xl">What's on your <span class="text-red-500">mind?</span></h2>
-  <%= form_with model: @blog_post, url: create_blog_post_path, class:"space-y-8" do |f| %>
+  <%= form_with model: @blog_post, url: create_blog_post_path, class:"" do |f| %>
     <% if @blog_post.errors.any? %>
-      <div class="alert alert-danger p-4">
-        <h4>Please fix the mentioned problems:</h4>
-        <ul class="mb-0">
-          <% @blog_post.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
+      <div class="bg-red-100 mt-8 border-l-4 border-red-500 text-red-700 p-4" role="alert">
+        <p class="font-bold mb-4">Please consider fixing errors below in order to submit your article</p>
+        <% @blog_post.errors.full_messages.each do |message| %>
+          <p class="ml-4"><%= message %></p>
+        <% end %>
       </div>
     <% end %>
-    <div class="flex flex-col gap-2">
-      <%= f.label :title, "Title", class:"font-medium" %>
-      <%= f.text_field :title, class: "w-full border-0 bg-gray-200 rounded" %>
-    </div>
-    <div class="flex flex-col gap-2">
-      <%= f.label :body, "Body", class:"font-medium" %>
-      <%= f.text_area :body, class: "w-full border-0 bg-gray-200 h-72 rounded" %>
-    </div>
-    <div class="">
-      <%= f.submit "Submit Article", class:"w-full text-left p-5 text-white rounded bg-red-500 cursor-pointer hover:bg-black" %>
+    <div class="space-y-8 mt-16">
+      <div class="flex flex-col gap-2">
+        <%= f.label :title, "Title", class:"font-medium" %>
+        <%= f.text_field :title, class: "w-full border-0 bg-gray-200 rounded" %>
+      </div>
+      <div class="flex flex-col gap-2">
+        <%= f.label :body, "Body", class:"font-medium" %>
+        <%= f.text_area :body, class: "w-full border-0 bg-gray-200 p-4 h-72 rounded" %>
+      </div>
+      <div>
+        <%= f.submit "Submit Article", class:"w-full text-left p-5 text-white rounded bg-red-500 cursor-pointer hover:bg-black" %>
+      </div>
     </div>
   <% end %>
 </div>
