--- a/app/views/post/create.html.erb
+++ b/app/views/post/create.html.erb
@@ -1,11 +1,11 @@
 <div class="w-full">
   <h2 class="font-bold md:text-4xl text-2xl">What's on your <span class="text-red-500">mind?</span></h2>
-  <%= form_with model: @blog_post, url: create_blog_post_path, class:"" do |f| %>
+  <%= form_with model: @blog_post, url: post_blog_path, class:"" do |f| %>
     <% if @blog_post.errors.any? %>
       <div class="bg-red-100 mt-8 border-l-4 border-red-500 text-red-700 p-4" role="alert">
         <p class="font-bold mb-4">Please consider fixing errors below in order to submit your article</p>
         <% @blog_post.errors.full_messages.each do |message| %>
-          <p class="ml-4"><%= message %></p>
+          <p class="ml-4">- <%= message %></p>
         <% end %>
       </div>
     <% end %>
