--- a/app/views/post/getpost.html.erb
+++ b/app/views/post/getpost.html.erb
@@ -1,8 +1,13 @@
 <div class="w-full">
   <div class="border-l-8 border-red-500 pl-4">
-    <p class="text-gray-500 mb-2">
-      <%= @post.created_at.strftime("%Y-%m-%d") %>
-    </p>
+    <div class="">
+      <p class="text-gray-500 mb-2">
+        <%= @post.created_at.strftime("%Y-%m-%d") %>
+      </p>
+      <p class="text-gray-700 text-xl font-semibold mb-2">
+        <%= @author.username %>
+      </p>
+    </div>
     <h1 class="font-bold md:text-7xl text-4xl">
       <%= @post.title %>
     </h1>
