--- a/app/views/user/dashboard.html.erb
+++ b/app/views/user/dashboard.html.erb
@@ -1,8 +1,21 @@
-<div class="">
+<div class="w-full">
   <div class="border-l-8 border-red-500 pl-6 py-8">
     <span class="text-2xl mb-2 block">currently signed in as:</span>
     <h2 class="text-2xl md:text-6xl font-semibold"><%= Current.user.username %></h2>
+    <h3 class="text-1xl md:text-2xl font-semibold mt-8"><%= Current.user.email %></h3>
+    <%= button_to "Log out", logout_path, method: :delete, class:"text-red-700 p-2 border border-red-500 rounded mt-4" %>
   </div>
-  <h3 class="text-1xl md:text-2xl font-semibold mt-8">Email: <%= Current.user.email %></h3>
-  <%= button_to "Log out", logout_path, method: :delete, class:"text-red-700 p-2 border border-red-500 rounded mt-4" %>
+  <% if @blogs.any? %>
+    <h2 class="mt-16 mb-4 font-semibold text-xl">Articles:</h2>
+    <div class="space-y-4 p-4 bg-gray-200 w-full rounded">
+      <% @blogs.each do |blog| %>
+        <ul class="bg-white p-4 rounded space-y-5">
+          <li class="font-bold md:text-lg"><%= blog.title %></li>
+          <li><%= link_to "Read more", post_item_path(blog), class:"rounded border font-medium p-1 border-red-500 text-red-500" %></li>
+        </ul>
+      <% end %>
+    </div>
+  <% else %>
+    <h2 class="mt-16 mb-4 font-semibold text-xl">You have no Articles yet, <%= link_to "start writing your vary first!", post_blog_path, class:"text-xl inline-block text-red-500 underline" %></h2>
+  <% end %>
 </div>
