--- a/app/views/user/dashboard.html.erb
+++ b/app/views/user/dashboard.html.erb
@@ -6,7 +6,7 @@
     <%= button_to "Log out", logout_path, method: :delete, class:"text-red-700 p-2 border border-red-500 rounded mt-4" %>
   </div>
   <% if @blogs.any? %>
-    <h2 class="mt-16 mb-4 font-semibold text-xl">Articles:</h2>
+    <h2 class="mt-16 mb-4 font-semibold text-xl">Your Articles:</h2>
     <div class="space-y-4 p-4 bg-gray-200 w-full rounded">
       <% @blogs.each do |blog| %>
         <ul class="bg-white p-4 rounded space-y-5">
