added a stimulus controller for mobile navbar's toggle functionality (hiding/showing links)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="spacing-y-4">
-    <header id="header" >
+    <header>
       <%= render partial:"shared/navbar" %>
     </header>
     <main id="main" class="container mx-auto my-28 px-5 flex">
