--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,10 @@
-<nav class="flex items-center justify-between flex-wrap bg-red-500 py-4 px-6">
+<nav data-controller="mobileNav" class="flex items-center justify-between flex-wrap bg-red-500 py-4 px-6">
   <div class="flex items-center flex-shrink-0 text-white mr-6">
     <%= link_to root_path do %>
       <span class="font-semibold text-white text-xl tracking-tight">KB</span>
     <% end %>
   </div>
-  <div class="block lg:hidden">
+  <div id="burgerBtn" data-action="click->mobileNav#toggleNavbar" class="block lg:hidden">
     <button
             class="flex items-center px-3 py-2 border rounded text-white border-white hover:text-white hover:border-white">
       <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -13,7 +13,7 @@
       </svg>
     </button>
   </div>
-  <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+  <div id="mobileNavLinks" class="hidden w-full block flex-grow lg:flex lg:items-center lg:w-auto">
     <div class="text-sm lg:flex-grow">
       <%= link_to "Home", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-100 hover:text-white mr-4" %>
       <%= link_to "Blogs", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-100 hover:text-white mr-4" %>
