--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
         <% if Current.user %>
           <%= link_to "Be the first by uploading yours!", post_blog_path, class:"text-xl px-2 mt-4 py-1 inline-block bg-black rounded text-white hover:text-red-500 duration-300" %>
         <% else %>
-          <%= link_to "create an account and post the first!", register_path, class:"text-xl px-2 mt-4 py-1 inline-block bg-black rounded text-white hover:text-red-500 duration-300" %>
+          <%= link_to "create an account and post your first!", register_path, class:"text-xl px-2 mt-4 py-1 inline-block bg-black rounded text-white hover:text-red-500 duration-300" %>
         <% end %>
       </div>
     <% end %>
