--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -41,6 +41,6 @@
 
   <div class="text-center text-gray-300 p-4" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2021 Copyright:
-    <a class="text-gray-50" href="https://tailwind-elements.com/">Tailwind Elements</a>
+    <a class="text-gray-50" href="https://tailwind-elements.com/">Ilia Talebzade</a>
   </div>
 </footer>
