--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav data-controller="mobileNav" class="flex items-center justify-between flex-wrap bg-red-500 py-4 px-6">
   <div class="flex items-center flex-shrink-0 text-white mr-6">
     <%= link_to root_path do %>
-      <span class="font-semibold text-white text-xl tracking-tight">KB</span>
+      <span class="font-semibold text-white text-xl tracking-tight bg-red-800 px-4 py-2 rounded">KB</span>
     <% end %>
   </div>
   <div id="burgerBtn" data-action="click->mobileNav#toggleNavbar" class="block lg:hidden">
@@ -15,13 +15,10 @@
   </div>
   <div id="mobileNavLinks" class="hidden w-full block flex-grow lg:flex lg:items-center lg:w-auto">
     <div class="text-sm lg:flex-grow">
-      <%= link_to "Home", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-100 hover:text-white mr-4" %>
-      <%= link_to "Blogs", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-100 hover:text-white mr-4" %>
-      <%= link_to "About", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-100 hover:text-white mr-4" %>
+      <%= link_to "Home", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
+      <%= link_to "About", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
+      <%= link_to "Blogs", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
     </div>
-    <%# <div> %>
-    <%#= link_to "Post a blog", post_blog_path, class: "inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-red-500 hover:bg-white mt-4 lg:mt-0" %>
-    <%# </div> %>
     <% if Current.user %>
       <p class="font-semibold">
         <%= link_to dashboard_path, class:"text-white font-bold bg-red-800 p-2 rounded" do %>
