--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <%= render partial:"shared/navbar" %>
     </header>
     <main id="main" class="container mx-auto my-28 px-5 flex">
+      <%= render partial:"shared/flash" %>
       <%= yield %>
     </main>
     <footer id="footer" >
