added rich text to post#create

--- a/app/views/post/create.html.erb
+++ b/app/views/post/create.html.erb
@@ -16,7 +16,7 @@
       </div>
       <div class="flex flex-col gap-2">
         <%= f.label :body, "Body", class:"font-medium" %>
-        <%= f.text_area :body, class: "w-full border-0 bg-gray-200 p-4 h-72 rounded" %>
+        <%= f.rich_text_area :body, class: "w-full border-0 bg-gray-200 p-4 h-72 rounded" %>
       </div>
       <div>
         <%= f.submit "Submit Article", class:"w-full text-left p-5 text-white rounded bg-red-500 cursor-pointer hover:bg-black" %>
