added and configured fonts

--- a/app/views/post/getpost.html.erb
+++ b/app/views/post/getpost.html.erb
@@ -8,12 +8,12 @@
         <%= @author.username %>
       </p>
     </div>
-    <h1 class="font-bold md:text-7xl text-4xl">
+    <h1 class="font-bold text-4xl md:text-7xl">
       <%= @post.title %>
     </h1>
   </div>
   <div class="w-full bg-gray-200 rounded p-4 mt-16">
-    <p class="leading-9">
+    <p class="leading-9 font-bold text-4xl md:text-7xl">
       <%= @post.body %>
     </p>
   </div>
