--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,12 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'actiontext.css';
 
+@font-face {
+  font-family: 'oswald';
+  font-display: swap;
+  src: url("Oswald-VariableFont_wght.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: 'raleway';
+  font-display: swap;
+  src: url("Raleway-VariableFont_wght.ttf") format('truetype');
+}
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'raleway';
+}
+
+p+div>* {
+  font-size: 1.2rem;
+  white-space: normal;
+}
+
+.trix-content a {
+  text-decoration: underline !important;
+  color: red !important;
+  white-space: pre-wrap;
+  /* css-3 */
+  white-space: -moz-pre-wrap;
+  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  word-wrap: break-word;
+  /* Internet Explorer 5.5+ */
 }
 
 html,
@@ -28,4 +61,4 @@ body {
 #footer {
   width: 100%;
   height: 10%;
-}@import 'actiontext.css';
+}
