--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,8 +14,8 @@
       </svg>
     </button>
   </div>
-  <div id="mobileNavLinks" class="hidden w-full block flex-grow lg:flex lg:items-center lg:w-auto">
-    <div class="text-sm lg:flex-grow">
+  <div id="mobileNavLinks" class="hidden w-full flex-grow lg:flex lg:items-center lg:w-auto">
+    <div class="text-sm lg:flex-grow my-4 lg:my-0">
       <%= link_to "Home", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
       <%= link_to "Blogs", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
       <%= link_to "About", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
