--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,14 @@
-<ul class="bg-slate-900 mb-4 text-white p-4 rounded space-y-5">
-  <li class="font-bold md:text-lg"><%= comment.content %></li>
-  <li>by: <span class="text-red-500 font-semibold tracking-wider"><%= comment.user.username %></span></li>
+<ul class="bg-slate-900 mb-4 flex justify-between text-white p-4 rounded">
+  <div class="space-y-5">
+    <li class="font-bold md:text-lg"><%= comment.content %></li>
+    <li>
+      by:
+      <span class="text-red-500 font-semibold tracking-wider">
+        <%= link_to comment.user.username, show_user_path(comment.user), class:"font-semibold text-red-500 hover:underline" %>
+      </span>
+    </li>
+  </div>
+  <% if Current.user == comment.user %>
+    <%= button_to image_tag("bin.png", alt: "delete", class: "w-4 cursor-pointer"), delete_comment_path(comment.id), method: :delete %>
+  <% end %>
 </ul>
