--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full text-center flex flex-col justify-center items-center">
-  <h1 class="text-2xl md:text-4xl mb-4 font-bold text-center text-black">Sorry, We couldn't find The page you're looking for</h1>
+  <h1 class="text-2xl md:text-4xl mb-4 font-bold text-center text-slate-900">Sorry, We couldn't find The page you're looking for</h1>
   <%= link_to "Return to home page", root_path, class:"text-lg md:text-2xl mb-12 text-center font-semibold underline inline-block text-red-500"%>
   <img class="rounded shadow-xl h-86 overflow-hidden" src="https://yoast.com/app/uploads/2015/08/404_error_checking_FI.png" alt="">
 </div>
