--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,16 @@
 <div class="w-full">
-  <h1 class="font-bold md:text-7xl text-4xl"><span class="text-red-500">Killer</span> Blog</h1>
+  <h1 class="font-bold md:text-3xlxl text-4xl">Recently Uploaded <span class="text-red-500">Blogs</span></h1>
   <div class="mt-16 space-y-4 p-4 bg-gray-200 w-full rounded">
     <% if @posts.any? %>
       <% @posts.each do |post| %>
         <ul class="bg-white p-4 rounded space-y-5">
+          <li>by:
+            <span class="font-semibold text-red-500">
+              <%= link_to post.user.username, show_user_path(post.user), class:"font-semibold text-red-500 hover:underline" %>
+            </span>
+          </li>
           <li class="font-bold md:text-lg"><%= post.title %></li>
-          <li><%= link_to "Read more", post_item_path(post), class:"rounded border font-medium p-1 border-red-500 text-red-500" %></li>
+          <li><%= link_to "Read more", post_item_path(post), class:"rounded font-semibold border-2 p-1 border-red-500 text-red-500 hover:bg-red-500 hover:text-white" %></li>
         </ul>
       <% end %>
     <% else %>
