--- a/app/views/post/getpost.html.erb
+++ b/app/views/post/getpost.html.erb
@@ -1,18 +1,18 @@
 <div class="w-full">
-  <div class="border-l-8 border-red-500 pl-4">
+  <div class="space-y-4 bg-red-500 rounded shadow-sm shadow-red-500 px-8 py-16 pl-6">
     <div class="">
-      <p class="text-gray-500 mb-2">
-        <%= @post.created_at.strftime("%Y-%m-%d") %>
+      <p class="text-white mb-2">
+        published in: <%= @post.created_at.strftime("%Y-%m-%d") %>
       </p>
-      <p class="text-gray-700 text-xl mb-2">
-        Written by: <small class="text-xl font-semibold"><%= @author.username %></small>
+      <p class="text-white text-xl mb-2">
+        Written by: <%= link_to @post.user.username, show_user_path(@post.user), class:"font-semibold text-slate-900 hover:underline" %></small>
       </p>
     </div>
-    <h1 class="font-bold text-4xl md:text-7xl">
+    <h1 class="font-bold border-l-8 text-slate-900 pl-4 border-slate-900 text-4xl md:text-7xl">
       <%= @post.title %>
     </h1>
   </div>
-  <div class="w-full bg-gray-200 rounded p-4 mt-16">
+  <div class="w-full bg-gray-200 rounded px-4 py-16 mt-16">
     <p class="leading-9 font-bold text-4xl md:text-7xl">
       <%= @post.body %>
     </p>
@@ -25,7 +25,7 @@
         <%= render partial: "shared/commentsForm", locals: { post: @post } %>
       </div>
       <%# render posted comments (if there's any at all) %>
-      <div class="mt-8 lg:mt-0 lg:flex-1">
+      <div class="mt-8 lg:mt-0 lg:flex-1 rounded shadow-md shadow-slate-300 p-4">
         <h3 class="text-xl mb-3 font-semibold">Comments:</h3>
         <%= render @post.comments.order(id: :desc) %>
       </div>
