--- a/app/views/user/dashboard.html.erb
+++ b/app/views/user/dashboard.html.erb
@@ -1,12 +1,13 @@
 <div class="w-full">
-  <div class="border-l-8 border-red-500 pl-6 py-8">
-    <span class="text-2xl mb-2 block">currently signed in as:</span>
-    <h2 class="text-2xl md:text-6xl font-semibold"><%= Current.user.username %></h2>
-    <h3 class="text-1xl md:text-2xl font-semibold mt-8"><%= Current.user.email %></h3>
-    <%= button_to "Log out", logout_path, method: :delete, class:"text-red-700 p-2 border border-red-500 rounded mt-4" %>
+  <div class="pl-6 rounded px-8 py-16 space-y-4 bg-red-500 shadow-sm shadow-red-500 lg:bg-account-banner bg-cover bg-bottom">
+    <span class="text-lg lg:text-2xl block">currently signed in as:</span>
+    <div class="ml-4">
+      <h2 class="text-2xl md:text-6xl font-semibold"><%= Current.user.username %></h2>
+      <h3 class="text-1xl md:text-2xl font-semibold">email: <%= Current.user.email %></h3>
+    </div>
   </div>
   <% if @blogs.any? %>
-    <h2 class="mt-16 mb-4 font-semibold text-xl">Your Articles:</h2>
+    <h2 class="mt-16 mb-4 font-semibold text-xl">Your Articles (<%= @blogs.length %>) :</h2>
     <div class="space-y-4 p-4 bg-gray-200 w-full rounded">
       <% @blogs.each do |blog| %>
         <ul class="bg-white p-4 rounded space-y-5">
@@ -18,4 +19,5 @@
   <% else %>
     <h2 class="mt-16 mb-4 font-semibold text-xl">You haven't written any articles yet, <%= link_to "start writing your vary first!", post_blog_path, class:"text-xl inline-block text-red-500 underline" %></h2>
   <% end %>
+  <%= button_to "Log out", logout_path, method: :delete, class:"text-red-700 p-2 border border-red-500 rounded mt-4" %>
 </div>
