--- a/app/views/user/dashboard.html.erb
+++ b/app/views/user/dashboard.html.erb
@@ -7,17 +7,23 @@
     </div>
   </div>
   <% if @blogs.any? %>
-    <h2 class="mt-16 mb-4 font-semibold text-xl">Your Articles (<%= @blogs.length %>) :</h2>
+    <div class="flex mt-16 mb-4 justify-between items-center">
+      <h2 class="font-semibold text-xl inline-block">Your Articles (<%= @blogs.length %>) :</h2>
+      <%= link_to post_blog_path, class:"text-xl inline-block text-red-500 bg-slate-900 p-2 rounded flex items-center gap-2" do %>
+        <%= image_tag("plus.webp", alt: "edit", class: "w-6 h-6 cursor-pointer") %>
+        <span>New</span>
+      <% end %>
+    </div>
     <div class="space-y-4 p-4 bg-gray-200 w-full rounded">
       <% @blogs.each do |blog| %>
         <ul class="bg-white p-4 rounded space-y-5">
           <li class="font-bold md:text-lg"><%= blog.title %></li>
-          <li><%= link_to "Read more", post_item_path(blog), class:"rounded border font-medium p-1 border-red-500 text-red-500" %></li>
+          <li><%= link_to "Read more", post_item_path(blog), class:"rounded font-semibold border-2 p-1 border-red-500 text-red-500 hover:bg-red-500 hover:text-white" %></li>
         </ul>
       <% end %>
     </div>
   <% else %>
     <h2 class="mt-16 mb-4 font-semibold text-xl">You haven't written any articles yet, <%= link_to "start writing your vary first!", post_blog_path, class:"text-xl inline-block text-red-500 underline" %></h2>
   <% end %>
-  <%= button_to "Log out", logout_path, method: :delete, class:"text-red-700 p-2 border border-red-500 rounded mt-4" %>
+  <%= button_to "Log out", logout_path, method: :delete, class:"text-red-700 p-2 border border-red-500 rounded mt-12" %>
 </div>
