--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full">
-  <h1 class="font-bold md:text-3xlxl text-4xl">Recently Uploaded <span class="text-red-500">Blogs</span></h1>
+  <h1 class="font-bold md:text-3xlxl text-4xl text-center lg:text-left">Recently Uploaded <span class="text-red-500">Blogs</span></h1>
   <div class="mt-16 space-y-4 p-4 bg-gray-200 w-full rounded">
     <% if @posts.any? %>
       <% @posts.each do |post| %>
