--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav data-controller="mobileNav" class="flex items-center justify-between flex-wrap bg-red-500 py-4 px-6">
   <div class="flex items-center flex-shrink-0 text-white mr-6">
     <%= link_to root_path do %>
-      <span class="font-semibold text-white text-xl tracking-tight bg-red-800 px-4 py-2 rounded">KB</span>
+      <span class="font-semibold text-white text-xl tracking-tight bg-red-800 px-4 py-2 rounded hover:bg-slate-900 duration-200">KB</span>
     <% end %>
     <h1 class="mx-4 font-bold tracking-wide lg:hidden">Killer Blog</h1>
   </div>
@@ -18,7 +18,7 @@
     <div class="text-sm lg:flex-grow my-4 lg:my-0">
       <%= link_to "Home", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
       <%= link_to "Blogs", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
-      <%= link_to "About", root_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
+      <%= link_to "About", about_path, class:"block mt-4 lg:inline-block lg:mt-0 text-gray-200 hover:text-white mr-4 text-base font-semibold px-2" %>
     </div>
     <% if Current.user %>
       <p class="font-semibold">
