--- a/app/views/user/dashboard.html.erb
+++ b/app/views/user/dashboard.html.erb
@@ -23,7 +23,7 @@
       <% end %>
     </div>
   <% else %>
-    <h2 class="mt-16 mb-4 font-semibold text-xl">You haven't written any articles yet, <%= link_to "start writing your vary first!", post_blog_path, class:"text-xl inline-block text-red-500 underline" %></h2>
+    <h2 class="mt-16 mb-4 font-semibold text-xl">You haven't written any articles yet, <%= link_to "start writing your very first!", post_blog_path, class:"text-xl inline-block text-red-500 underline" %></h2>
   <% end %>
   <%= button_to "Log out", logout_path, method: :delete, class:"text-red-700 p-2 border border-red-500 rounded mt-12" %>
 </div>
